--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Pike Place Market</h1>
     <p class = "list" id = "cookiesSoldPerHour"></p>
-    <p id = "printedTimeList"></p>
+    <p id = "printedList"></p>
     <script src = "app.js"></script>
   </body>
 </html>
