--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <h1>Pike Place Market</h1>
-    <p class = "list" id = "cookiesSoldPerHour"></p>
-    <p id = "printedList"></p>
+    <section id = "printedList"></section>
     <script src = "app.js"></script>
   </body>
 </html>
