--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css" >
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel=stylesheet type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:600,300,400' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>Pat's Salmon Cookies</title>
   </head>
   <body>
+    <header>Pat's Salmon Cookies</header>
+    <br>
+    <h1 class = "h1"></h1>
     <section id = "printedList"></section>
     <script src = "app.js"></script>
   </body>
