updated some css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css" >
-    <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel=stylesheet type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:600,300,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,300,400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Halant:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>Pat's Salmon Cookies</title>
   </head>
   <body>
-    <header>Pat's Salmon Cookies</header>
+    <header id = "productName">Pat's Salmon Cookies</header>
     <br>
     <h1 class = "h1"></h1>
     <section id = "printedList"></section>
