--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id = "productName">Pat's Salmon Cookies</header>
     <br>
     <h1 class = "h1"></h1>
-    <section id = "printedList"></section>
+    <section id = "table"></section>
     <script src = "app.js"></script>
   </body>
 </html>
