--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <header id = "productName">Pat's Salmon Cookies</header>
     <br>
     <h1 class = "h1"></h1>
+    <form id="userInfo">
+      <label for = "inputLocationName">Store location</label><input type="text" id = "inputLocationName"><br>
+      <label for = "inputMinCustomers">Min. customers</label><input type="number" id = "inputMinCustomers"><br>
+      <label for = "inputMaxCustomers">Max. customers</label><input type="number" id = "inputMaxCustomers"><br>
+      <label for = "inputAvgCookiesSold">Avg. cookies sold</label><input type="number" id = "inputAvgCookiesSold"><br>
+      <button id="submit">Submit</button>
+    </form><br>
     <section id = "table"></section>
     <script src = "app.js"></script>
   </body>
