--- a/styleguide.html
+++ b/styleguide.html
@@ -8,42 +8,51 @@
     <meta charset="utf-8">
     <title> Pat's Salmon Cookies Styleguide</title>
   </head>
+  <nav>
+    <ul>
+      <li class = "navigationContent"><a href = "index.html">Home</a></li>
+      <li class = "navigationContent"><a href = "sales.html">Sales Data</a></li>
+      <li class = "navigationContent"><a href = "styleguide.html">Branding</a></li>
+    </ul>
+  </nav>
   <body>
-    <header>Styleguide</header>
+    <section class = "avoidNavBar">
+      <header>Styleguide</header>
 
-    <h1>Typography</h1>
-      <h2>main logo</h2>
-        <p>The company name should appear in Open Sans 700 Uppercase.</p>
-        <p id="productName">PAT'S SALMON COOKIES</p>
-      <h2>store names</h2>
-        <p>The store names should appear in Open Sans 600.</p>
-        <p id="storeName">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwyz</p>
-      <h2>store information</h2>
-        <p>The general store information should appear in Open Sans 300.</p>
-        <p id="storeInfo">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwyz</p>
+      <h1>Typography</h1>
+        <h2>main logo</h2>
+          <p>The company name should appear in Open Sans 700 Uppercase.</p>
+          <p id="productName">PAT'S SALMON COOKIES</p>
+        <h2>store names + slogan</h2>
+          <p>The store names should appear in Open Sans 600.</p>
+          <p id="storeName">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwyz</p>
+        <h2>store information + general text</h2>
+          <p>The general store information should appear in Open Sans 300.</p>
+          <p id="storeInfo">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwyz</p>
 
-    <h1>Logo</h1>
-      <h2>main logo</h2>
-        <p>The logo is made up of the 4 types of salmon used in Pat's Salmon Cookies.</p>
-        <p>*The below logo must always be used.</p>
-        <img src="img/fish.jpg"/ id = "mainLogo">
+      <h1>Logo</h1>
+        <h2>main logo</h2>
+          <p>The logo is made up of the 4 types of salmon used in Pat's Salmon Cookies.</p>
+          <p>*The below logo must always be used.</p>
+          <img src="img/fish.jpg"/ id = "mainLogo">
 
-    <h1>Colour Palette</h1>
-      <h2>brand colours</h2>
-        <p>These colours should be used for all general communications such as advertising, marketing, and online content.</p>
-        <div id="container">
-          <div class="colourBox" id="hexCode1">
-            <p><br>hexcode: ede8af
-            </p>
+      <h1>Colour Palette</h1>
+        <h2>brand colours</h2>
+          <p>These colours should be used for all general communications such as advertising, marketing, and online content.</p>
+          <div id="container">
+            <div class="colourBox" id="hexCode1">
+              <p><br>hexcode: ede8af
+              </p>
+            </div>
+            <div class="colourBox" id="hexCode2">
+              <p><br>hexcode: edc9af
+              </p>
+            </div>
+            <div class="colourBox" id="hexCode3">
+              <p><br>hexcode: edafb4
+              </p>
+            </div>
           </div>
-          <div class="colourBox" id="hexCode2">
-            <p><br>hexcode: edc9af
-            </p>
-          </div>
-          <div class="colourBox" id="hexCode3">
-            <p><br>hexcode: edafb4
-            </p>
-          </div>
-        </div>
-  </body>
+      </section>
+    </body>
 </html>
