--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,300,400,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Halant:400,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-    <meta charset="utf-8">
     <title>Pat's Salmon Cookies</title>
   </head>
   <nav>
@@ -22,18 +22,10 @@
     <h1 id = "tagline">Salmon cookies made with fish, salmon cookies are delish!</h1>
     <br><br>
     <section class = "avoidNavBar">
-      <form class = "generalText" id="userInfo">
-        <label for = "inputLocationName">Store location</label><input class = "generalText" type="text" id = "inputLocationName"><br>
-        <label for = "inputMinCustomers">Min. customers</label><input class = "generalText" type="number" id = "inputMinCustomers"><br>
-        <label for = "inputMaxCustomers">Max. customers</label><input class = "generalText" type="number" id = "inputMaxCustomers"><br>
-        <label for = "inputAvgCookiesSold">Avg. cookies sold</label><input class = "generalText" type="number" id = "inputAvgCookiesSold"><br>
-        <br>
-        <button id="submit">Submit</button>
-      </form><br>
-      <section class = "generalText" id = "table"></section>
-      <br>
-      <section class = "generalText" id = "table2"></section>
-    <script src = "app.js"></script>
+      <h2>About Pat's Salmon Cookies</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
     </section>
   </body>
 </html>
