--- a/styleguide.html
+++ b/styleguide.html
@@ -11,6 +11,7 @@
   <nav>
     <ul>
       <li class = "navigationContent"><a href = "index.html">Home</a></li>
+      <li class = "navigationContent"><a href = "about.html">About</a></li>
       <li class = "navigationContent"><a href = "sales.html">Sales Data</a></li>
       <li class = "navigationContent"><a href = "styleguide.html">Branding</a></li>
     </ul>
